--- a/EjemploHTML.html
+++ b/EjemploHTML.html
@@ -6,7 +6,7 @@
 
   <title>Ejemplo HTML</title>
   <meta name="description" content="Ejemplo HTML">
-  <meta name="author" content="Jose">
+  <meta name="author" content="Jhohan">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
@@ -17,6 +17,6 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <a>Ingrese sus expectativas del curso aqui</a>
+  <a>Espero ampliar los conocimientos y buscar un enfoque que me guste para en caminar por esa linea de profundizacion</a>
 </body>
 </html>
